net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/RouteTableApiTest[2021-04-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-94e6d1d63e5fde9994990b78ee04c915-42b58f1c35a8f83c-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c30793e215da1a2c3aef5191498ac705",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:40 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "670eda75-5851-47cc-943f-e602d9e2e7f7",
        "x-ms-ratelimit-remaining-subscription-reads": "11751",
        "x-ms-request-id": "670eda75-5851-47cc-943f-e602d9e2e7f7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155140Z:670eda75-5851-47cc-943f-e602d9e2e7f7"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg8241?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-9c31dbbcfd9ffc06983c952d9ce1b8ad-c69369ea826d8dfb-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "edb796c265ba156aae43ecf2786167f8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:41 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "e4c9df16-f5d8-4a29-8ecc-3b34ccd1cd5f",
        "x-ms-ratelimit-remaining-subscription-writes": "1140",
        "x-ms-request-id": "e4c9df16-f5d8-4a29-8ecc-3b34ccd1cd5f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155141Z:e4c9df16-f5d8-4a29-8ecc-3b34ccd1cd5f"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241",
        "name": "csmrg8241",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "183",
        "Content-Type": "application/json",
        "traceparent": "00-0b7ef2cd35ac94a1417f2bde36989a47-f0a78e9f171fcfef-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a32e6faac07828a5c3ce7f7ce32a7fe3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "routes": [
            {
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/1110446c-47fd-4d77-bc0d-12b12e7523a7?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1071",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:43 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7e477859-0ead-4edc-8274-5a28945235c2",
        "x-ms-client-request-id": "a32e6faac07828a5c3ce7f7ce32a7fe3",
        "x-ms-correlation-request-id": "154afde5-81c8-48d3-a513-153a45cd1b44",
        "x-ms-ratelimit-remaining-subscription-writes": "1139",
        "x-ms-request-id": "1110446c-47fd-4d77-bc0d-12b12e7523a7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155144Z:154afde5-81c8-48d3-a513-153a45cd1b44"
      },
      "ResponseBody": {
        "name": "azsmnet821",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "etag": "W/\"cd3f40cc-13d5-4396-a761-67783a7e8230\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "a1905643-a380-4172-afa4-0ba85e5b6713",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet5983",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet5983",
              "etag": "W/\"cd3f40cc-13d5-4396-a761-67783a7e8230\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/1110446c-47fd-4d77-bc0d-12b12e7523a7?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-0b7ef2cd35ac94a1417f2bde36989a47-1c538773b5966672-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "eb5b212ef3942d3f143ca6462fc709c8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:43 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3274b5f7-6a1b-474a-af2c-1b03e48cf9c7",
        "x-ms-client-request-id": "eb5b212ef3942d3f143ca6462fc709c8",
        "x-ms-correlation-request-id": "714168a8-cd39-45cb-80d3-79ad3a35b5f3",
        "x-ms-ratelimit-remaining-subscription-reads": "11750",
        "x-ms-request-id": "1ce6e608-17ab-4f65-9426-ccd389aaf180",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155144Z:714168a8-cd39-45cb-80d3-79ad3a35b5f3"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-0b7ef2cd35ac94a1417f2bde36989a47-a557d9f601481da4-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "09747ef833f50d78c102d23898e39ad9",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1073",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:44 GMT",
        "ETag": "W/\"c8409506-4259-41ce-85aa-b8e73d2c1b2f\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "97fc20c6-406e-4fa3-947d-6d8d07728868",
        "x-ms-client-request-id": "09747ef833f50d78c102d23898e39ad9",
        "x-ms-correlation-request-id": "82bc75d6-fb7a-41e8-b120-c2d36aa60797",
        "x-ms-ratelimit-remaining-subscription-reads": "11749",
        "x-ms-request-id": "e815ca62-8053-4032-9733-64279342f8b1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155144Z:82bc75d6-fb7a-41e8-b120-c2d36aa60797"
      },
      "ResponseBody": {
        "name": "azsmnet821",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "etag": "W/\"c8409506-4259-41ce-85aa-b8e73d2c1b2f\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "a1905643-a380-4172-afa4-0ba85e5b6713",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet5983",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet5983",
              "etag": "W/\"c8409506-4259-41ce-85aa-b8e73d2c1b2f\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-3ca75bad3b2dabc665119395a5a7cbae-e79e3a884d8254a6-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c14d3f3694ce004eafe613f0f667fc09",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1073",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:44 GMT",
        "ETag": "W/\"c8409506-4259-41ce-85aa-b8e73d2c1b2f\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "217eb613-2c0c-451a-a60b-629354f4fe1a",
        "x-ms-client-request-id": "c14d3f3694ce004eafe613f0f667fc09",
        "x-ms-correlation-request-id": "d4a7ac19-5108-4d82-8864-e101a9dd41aa",
        "x-ms-ratelimit-remaining-subscription-reads": "11748",
        "x-ms-request-id": "941f6bbb-41ac-4d28-a83f-3aefb60e3fcf",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155145Z:d4a7ac19-5108-4d82-8864-e101a9dd41aa"
      },
      "ResponseBody": {
        "name": "azsmnet821",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "etag": "W/\"c8409506-4259-41ce-85aa-b8e73d2c1b2f\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "a1905643-a380-4172-afa4-0ba85e5b6713",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet5983",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet5983",
              "etag": "W/\"c8409506-4259-41ce-85aa-b8e73d2c1b2f\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "670",
        "Content-Type": "application/json",
        "traceparent": "00-28ceed7375d54b2e9a28f611459e1b0e-d9e0582624305a5b-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0fc95f368f75fb4aa94e299121079430",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "properties": {
          "routes": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet5983",
              "type": "Microsoft.Network/routeTables/routes",
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            },
            {
              "properties": {
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              }
            }
          ],
          "disableBgpRoutePropagation": false
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/4650c77f-ff29-48b9-97c8-37c36b950586?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1604",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:45 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "feb2fa95-480e-4bff-8751-b10d509d2422",
        "x-ms-client-request-id": "0fc95f368f75fb4aa94e299121079430",
        "x-ms-correlation-request-id": "fbce4b75-326b-4b73-bbf3-0e49d2b87f9b",
        "x-ms-ratelimit-remaining-subscription-writes": "1138",
        "x-ms-request-id": "4650c77f-ff29-48b9-97c8-37c36b950586",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155145Z:fbce4b75-326b-4b73-bbf3-0e49d2b87f9b"
      },
      "ResponseBody": {
        "name": "azsmnet821",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "etag": "W/\"bb3d79df-1453-4406-a34d-4b923be08c0e\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "a1905643-a380-4172-afa4-0ba85e5b6713",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet5983",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet5983",
              "etag": "W/\"bb3d79df-1453-4406-a34d-4b923be08c0e\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet8431",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet8431",
              "etag": "W/\"bb3d79df-1453-4406-a34d-4b923be08c0e\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/4650c77f-ff29-48b9-97c8-37c36b950586?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-28ceed7375d54b2e9a28f611459e1b0e-9cb6b12e7807c60b-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3801c8068b1aa663f45118806abcdfa7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:45 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "98b9f4f5-2bfc-4a02-898a-874eb962c9c5",
        "x-ms-client-request-id": "3801c8068b1aa663f45118806abcdfa7",
        "x-ms-correlation-request-id": "1bbafeb7-6722-41b3-8a04-79a15baddfb4",
        "x-ms-ratelimit-remaining-subscription-reads": "11747",
        "x-ms-request-id": "0486ebad-4e04-4982-8d45-1c19a7a7cad2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155146Z:1bbafeb7-6722-41b3-8a04-79a15baddfb4"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-28ceed7375d54b2e9a28f611459e1b0e-6851e11941aa0949-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "284ee2510b56ef8e6565df01343bdb21",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1607",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:45 GMT",
        "ETag": "W/\"4fbcd503-ab61-4984-b462-98e3efaa3251\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3e0b4c4c-fb73-407a-83cd-615b315fae51",
        "x-ms-client-request-id": "284ee2510b56ef8e6565df01343bdb21",
        "x-ms-correlation-request-id": "9f239736-0f04-451e-bd57-d189e0607743",
        "x-ms-ratelimit-remaining-subscription-reads": "11746",
        "x-ms-request-id": "fdab68aa-b107-4aec-808a-e7fa344a79f4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155146Z:9f239736-0f04-451e-bd57-d189e0607743"
      },
      "ResponseBody": {
        "name": "azsmnet821",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "etag": "W/\"4fbcd503-ab61-4984-b462-98e3efaa3251\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "a1905643-a380-4172-afa4-0ba85e5b6713",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet5983",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet5983",
              "etag": "W/\"4fbcd503-ab61-4984-b462-98e3efaa3251\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet8431",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet8431",
              "etag": "W/\"4fbcd503-ab61-4984-b462-98e3efaa3251\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-f8d49a0d0d146b11a0cd597578163864-638a9cfa3127957b-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "588bcf375c0517166969fb282e78f972",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1607",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:46 GMT",
        "ETag": "W/\"4fbcd503-ab61-4984-b462-98e3efaa3251\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c9b3b80f-7662-4820-964f-fc7da1735398",
        "x-ms-client-request-id": "588bcf375c0517166969fb282e78f972",
        "x-ms-correlation-request-id": "2918a119-b292-4fdc-a321-1ccfaa148a00",
        "x-ms-ratelimit-remaining-subscription-reads": "11745",
        "x-ms-request-id": "31a7975a-bd87-4948-8b76-eabbf2dab81c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155146Z:2918a119-b292-4fdc-a321-1ccfaa148a00"
      },
      "ResponseBody": {
        "name": "azsmnet821",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "etag": "W/\"4fbcd503-ab61-4984-b462-98e3efaa3251\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "a1905643-a380-4172-afa4-0ba85e5b6713",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet5983",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet5983",
              "etag": "W/\"4fbcd503-ab61-4984-b462-98e3efaa3251\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet8431",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet8431",
              "etag": "W/\"4fbcd503-ab61-4984-b462-98e3efaa3251\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "534",
        "Content-Type": "application/json",
        "traceparent": "00-8f77cd24c1849c4f17baa42f2dba0f49-f44ae88ded5fe841-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3dbdb294ee39fa043912d3b4ab6271b8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "properties": {
          "routes": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet8431",
              "type": "Microsoft.Network/routeTables/routes",
              "properties": {
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              }
            }
          ],
          "disableBgpRoutePropagation": false
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/323b4852-a57e-4089-a1fd-d7dc969dc701?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1016",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:46 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ab6fcb06-faee-4873-b775-dcff3db13bfa",
        "x-ms-client-request-id": "3dbdb294ee39fa043912d3b4ab6271b8",
        "x-ms-correlation-request-id": "48f3164d-e14c-4d52-91d5-3a7b752fdcc4",
        "x-ms-ratelimit-remaining-subscription-writes": "1137",
        "x-ms-request-id": "323b4852-a57e-4089-a1fd-d7dc969dc701",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155147Z:48f3164d-e14c-4d52-91d5-3a7b752fdcc4"
      },
      "ResponseBody": {
        "name": "azsmnet821",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "etag": "W/\"876dda4f-f9f2-44dd-9fbe-3d855b0ea687\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "a1905643-a380-4172-afa4-0ba85e5b6713",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8431",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet8431",
              "etag": "W/\"876dda4f-f9f2-44dd-9fbe-3d855b0ea687\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/323b4852-a57e-4089-a1fd-d7dc969dc701?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-8f77cd24c1849c4f17baa42f2dba0f49-28f6137b66b25411-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "826c6c6c9d7e48e7cb911ef289616b07",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:47 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a1214b3b-2433-4564-9d9f-bcec6922b3d4",
        "x-ms-client-request-id": "826c6c6c9d7e48e7cb911ef289616b07",
        "x-ms-correlation-request-id": "a295a74d-3f84-434d-9ec2-06f8284ae410",
        "x-ms-ratelimit-remaining-subscription-reads": "11744",
        "x-ms-request-id": "99401af5-aa5e-49f2-a3de-d9076745011d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155147Z:a295a74d-3f84-434d-9ec2-06f8284ae410"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-8f77cd24c1849c4f17baa42f2dba0f49-fa49b95ef42c18eb-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "37b243f85e2f0d4110c871022e17ead3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1018",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:47 GMT",
        "ETag": "W/\"be3715c0-1740-4ea9-a873-c697d2542a3e\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e94cc07a-0481-4673-9d9d-a4e94ffb047c",
        "x-ms-client-request-id": "37b243f85e2f0d4110c871022e17ead3",
        "x-ms-correlation-request-id": "4edecfcd-6596-4dad-83c2-f6fbd718f9d9",
        "x-ms-ratelimit-remaining-subscription-reads": "11743",
        "x-ms-request-id": "cde774a3-ff02-4907-9179-c8ea112a0a0d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155148Z:4edecfcd-6596-4dad-83c2-f6fbd718f9d9"
      },
      "ResponseBody": {
        "name": "azsmnet821",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "etag": "W/\"be3715c0-1740-4ea9-a873-c697d2542a3e\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "a1905643-a380-4172-afa4-0ba85e5b6713",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8431",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet8431",
              "etag": "W/\"be3715c0-1740-4ea9-a873-c697d2542a3e\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-60ad6f1f56afb338c159c85fe80bf1d3-c96248f1ff88d79b-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3e48e552eff5d83a0f00d0a068af6c6a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1018",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:48 GMT",
        "ETag": "W/\"be3715c0-1740-4ea9-a873-c697d2542a3e\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "871528d8-aa24-4665-a203-e93cfe277bd9",
        "x-ms-client-request-id": "3e48e552eff5d83a0f00d0a068af6c6a",
        "x-ms-correlation-request-id": "54879548-402e-49de-ab8e-e1368e8c2f13",
        "x-ms-ratelimit-remaining-subscription-reads": "11742",
        "x-ms-request-id": "610f25f0-7f58-40ff-88c4-597f50bde8ce",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155148Z:54879548-402e-49de-ab8e-e1368e8c2f13"
      },
      "ResponseBody": {
        "name": "azsmnet821",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821",
        "etag": "W/\"be3715c0-1740-4ea9-a873-c697d2542a3e\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "a1905643-a380-4172-afa4-0ba85e5b6713",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8431",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821/routes/azsmnet8431",
              "etag": "W/\"be3715c0-1740-4ea9-a873-c697d2542a3e\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables/azsmnet821?api-version=2021-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-76a55e661a1a48f30e537e85ca39ace1-8896327ce5f589c3-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "ccf4b8cb89b40ebd2b5e72b62ce519b3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/2b76b728-9eec-4c77-9286-e54d1043e73b?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:51:48 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/2b76b728-9eec-4c77-9286-e54d1043e73b?api-version=2021-04-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "15816212-1899-4f4c-ad32-ad2bcacb913a",
        "x-ms-client-request-id": "ccf4b8cb89b40ebd2b5e72b62ce519b3",
        "x-ms-correlation-request-id": "14828994-eee5-4eb7-9f63-70849ee9ccb6",
        "x-ms-ratelimit-remaining-subscription-deletes": "14972",
        "x-ms-request-id": "2b76b728-9eec-4c77-9286-e54d1043e73b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155149Z:14828994-eee5-4eb7-9f63-70849ee9ccb6"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/2b76b728-9eec-4c77-9286-e54d1043e73b?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-76a55e661a1a48f30e537e85ca39ace1-0070f1d3552ae7ee-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7636065b1d22c81f283a13967d84ac2a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:48 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "47bd2ea4-7c13-4594-bbca-092b8c1a1fbe",
        "x-ms-client-request-id": "7636065b1d22c81f283a13967d84ac2a",
        "x-ms-correlation-request-id": "a179f9a8-0c9b-4d06-8b51-f5e649730da2",
        "x-ms-ratelimit-remaining-subscription-reads": "11741",
        "x-ms-request-id": "41fae423-7c27-47d7-b077-618b0755f9c2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155149Z:a179f9a8-0c9b-4d06-8b51-f5e649730da2"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg8241/providers/Microsoft.Network/routeTables?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-e521fdb996e464ccfa63b8497636e135-07146b4ecf575deb-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "1df91ce6c90e9f51a6ebc4da618f8089",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:49 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5865bdbf-ef30-4de1-820b-dc41abdb25df",
        "x-ms-client-request-id": "1df91ce6c90e9f51a6ebc4da618f8089",
        "x-ms-correlation-request-id": "7b79b830-a7f1-4cc3-961a-847047e93b18",
        "x-ms-ratelimit-remaining-subscription-reads": "11740",
        "x-ms-request-id": "c3874d0d-b600-4cd3-826e-d8896ffa7412",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155150Z:7b79b830-a7f1-4cc3-961a-847047e93b18"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1410757179",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
